Fixes btn-primary color on IE

--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -37,7 +37,11 @@ input, button, select, textarea {
     font: inherit;
 }
 
-a.btn-primary, a.btn-primary:hover, a.btn-primary:visited, a.btn-primary:active {
+a.btn-primary,
+a.btn-primary:hover,
+a.btn-primary:visited,
+a.btn-primary:active,
+a.btn-primary:focus {
     color: #fff;
 }
 
@@ -134,7 +138,6 @@ td.actions div button i {
 }
 div.actions a {
     margin-bottom: 10px;
-    color: #333;
 }
 
 /*------------------------------------------------------------------
